ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msr-ingress
  namespace: swag-intg
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cokie-name: ssnid
spec:
  ingressClassName: nginx
  rules:
  - host: msr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: msr-k8ssvc
            port:
              number: 5555
